# Zombie-game

./: Boss.h  CMakeLists.txt  Command.h  Container.h  Doxyfile  Entity.h  Game.cpp  Game.h  Gun.h  Inventory.h  LocalizationManager.h  Logger.h  Map.h  Player.h  README.md  Sword.h  Weapon.h  Zombie.h  main.cpp
assets/: en.json  ukr.json
tests/: Benchmarks.cpp  CMakeLists.txt  GameLogicTests.cpp
